# excel_reading_speed_test

./: .gitignore  README.md  generate_graphics.py  main.py  performance_results.csv  pyproject.toml  xlsx_to_csv.py
