[project]
name = "excel-reading-speed-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.2.0",
    "fastexcel>=0.13.0",
    "fireducks>=1.2.2",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "polars>=1.23.0",
    "tqdm>=4.67.1",
]
